    нужен конденсатор в цепь контроля напряжения аккумулятора
    посад место под электролит на цепь 3.3в
    ? питание через HT7833 (сравнить с текущим)


====================================================================================
===  version 0.6.1 (xx.xx.2022)
====================================================================================
обновлённый логотип

при инициализации gps-модема при ожидании подтверждения команд - давать работать другим процессам
при отправке в процессе синхронизации - давать работать другим процессам
работу с флешкой перекинуть на другой процессор, чтобы он не подвешивал основные процессы при записи
    сохранение конфига
    запись трека
    автостарт трека при прыжке или взлёте на определённой высоте

варнинги при компиляции (согласование типа данных у hton)

====================================================================================
===  version 0.6.0 (xx.xx.2022)
====================================================================================
- страница через настройки - "все видимые спутники"
компас
-    прямое получение данных по wire
-    авто-калибровка магнетометра
-    вычисление угла отрисовки компаса по векторам magnetic и accel
-    опция в настройках "использовать компас"
-    информация о подключенных датчиках компаса в тестировании аппаратуры
    привязка питания компаса к питанию жпс
- изменение в отображении жпс
-    зафиксировать компас (север всегда сверху)
-    вращать компас, если есть аппаратная поддержка
-    стрелкой указывать текущее направление движения
-    чем больше гориз скорость, тем длиннее стрелка
-    точку указывать вокруг по радиусу
-    за радиус принимать 400м (при приближении на меньшее расстояние точку рисовать ближе к центру)
-    страница "только жпс"

- тестирование аппаратуры - баг, при котором в случае любой ошибки на русском языке происходила перезагрузка

документация
-    все видимые спутнико
    доработки по отображению навигации