@@ -8,7 +8,7 @@ use IPC::Open3;
 
 #==========================================================
 
-my @version = (0, 5, 3);
+my @version = (0, 6, 0);
 
 my $dir     = 'arch.fw';
 
