@@ -1,0 +1,13 @@
+/*
+    Worker
+*/
+
+#ifndef _core_worker_key_H
+#define _core_worker_key_H
+
+enum {
+    WORKER_NONE = 0,
+    WORKER_GPS_INIT,
+};
+
+#endif // _core_worker_key_H
