@@ -11,7 +11,6 @@ hw (плата, доработать v.3)
 ====================================================================================
 обновлённый логотип
 
-при инициализации gps-модема при ожидании подтверждения команд - давать работать другим процессам
 при отправке в процессе синхронизации - давать работать другим процессам
 работу с флешкой перекинуть на другой процессор, чтобы он не подвешивал основные процессы при записи
     сохранение конфига
@@ -41,6 +40,16 @@ hw (плата, доработать v.3)
 -    страница "только жпс"
 
 - тестирование аппаратуры - баг, при котором в случае любой ошибки на русском языке происходила перезагрузка
+
+- worker - процеccинг длинных, но однократных операций
+-    каждый процесс - свой класс
+-    у каждого процесса уникальный ID
+-    состояние процесса: выполняется, ожидание, завершился
+-    список процессов - map
+-    запускать выполнятор процессов в самом конце общего цикла
+-    если хотябы один из процессов вернул "выполняется", заполнять выполнением всю паузу вместо delay
+
+инициализация gps-модема - через worker
 
 документация
 -    все видимые спутнико
